# guessing_game

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: auto.rs  guess.rs  main.rs
