[package]
name = "guessing_game_squared"
version = "1.0.0"
authors = ["GitSquared <GitSquared@users.noreply.github.com>"]
license = "WTFPL"
description = "An attempt at learning Rust"
homepage = "https://github.com/GitSquared/guessing_game"
repository = "https://github.com/GitSquared/guessing_game"
readme = "README.md"
publish = false

[dependencies]
rand = "0.4"
colored = "1.6"
