[package]
name = "guessing_game_squared"
version = "2.0.0"
authors = ["GitSquared <GitSquared@users.noreply.github.com>"]
license = "WTFPL"
description = "An attempt at learning Rust"
homepage = "https://github.com/GitSquared/guessing_game"
repository = "https://github.com/GitSquared/guessing_game"
readme = "README.md"
publish = false

[[bin]]
name = "guessing_game"
path = "src/guess.rs"

[[bin]]
name = "autoguess"
path = "src/auto.rs"

[dependencies]
rand = "0.5"
colored = "1.6"
meval = "0.1"
